--- a/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Details.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Details.cshtml
@@ -136,6 +136,6 @@ else
 }
 
 <div class="mt-4">
-    <button onclick="history.back()" class="btn btn-secondary">Voltar</button>
+    <button onclick="history.back()" class="btn btn-outline-secondary">Voltar</button>
     <a asp-action="Edit" asp-route-id="@Model.HotelId" class="btn btn-primary">Editar</a>
 </div>
