--- a/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Create.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Hotels/Create.cshtml
@@ -5,9 +5,10 @@
     ViewData["Title"] = "Cadastrar Hotel";
 }
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
-<h1>Cadastrar Novo Hotel</h1>
+<h1 class="d-flex align-items-center gap-2 mb-4">
+    <span class="material-symbols-outlined" style="font-size: 2.5rem">location_city</span>
+    Cadastrar Novo Hotel
+</h1>
 <hr />
 <form asp-action="Create">
     <div class="row">
@@ -50,7 +51,7 @@
             <div class="alert alert-info">
                 <i class="fas fa-info-circle"></i>
                 <strong>Dica:</strong> A primeira imagem será usada como imagem principal do hotel.
-                <a href="https://postimg.cc/gallery/fWZhj95" target="_blank" class="btn btn-sm btn-outline-primary ms-2">
+                <a href="https://postimg.cc/gallery/fWZhj95" target="_blank" class="btn btn-sm btn-outline-primary ms-2 d-flex gap-1">
                     <span class="material-icons">arrow_outward</span> Ver Galeria Postimg
                 </a>
             </div>
@@ -60,7 +61,7 @@
                     <label class="form-label">Imagem Principal *</label>
                     <div class="input-group">
                         <input type="url" name="ImageUrls[0]" class="form-control" placeholder="https://exemplo.com/imagem.jpg" />
-                        <button type="button" class="btn btn-outline-secondary" onclick="openPostimgGallery()">
+                        <button type="button" class="btn btn-outline-secondary d-flex gap-1" onclick="openPostimgGallery()">
                             <span class="material-icons">image</span> Galeria
                         </button>
                     </div>
@@ -272,12 +273,12 @@
                     <label class="form-label">Imagem ${imageUrlIndex + 1}</label>
                     <div class="input-group">
                         <input type="url" name="ImageUrls[${imageUrlIndex}]" class="form-control" placeholder="https://exemplo.com/imagem.jpg" />
-                        <button type="button" class="btn btn-outline-secondary" onclick="openPostimgGallery()">
+                        <button type="button" class="btn btn-outline-secondary d-flex gap-1" onclick="openPostimgGallery()">
                             <span class="material-symbols-outlined">
                                 art_track
                             </span> Galeria
                         </button>
-                        <button type="button" class="btn btn-outline-danger" onclick="removeImageUrl(this)">
+                        <button type="button" class="btn btn-outline-danger d-flex" onclick="removeImageUrl(this)">
                             <span class="material-symbols-outlined">
                                 delete
                             </span>
