--- a/ViagemImpacta/backend/ViagemImpacta/Views/Users/Index.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Users/Index.cshtml
@@ -35,6 +35,7 @@
             <th>Id</th>
             <th>Nome</th>
             <th>Email</th>
+            <th>Telefone</th>
             <th>CPF</th>
             <th>Ações</th>
         </tr>
@@ -48,19 +49,12 @@
                     <td>@user.UserId</td>
                     <td>@user.FirstName @user.LastName</td>
                     <td>@user.Email</td>
-                    <td>
-                        @{
-                            var cpf = user.Cpf?.ToString() ?? "";
-                            string formattedCpf = cpf.Length >= 11
-                            ? $"{cpf.Substring(0, 3)}.{cpf.Substring(3, 3)}.{cpf.Substring(6, 3)}-{cpf.Substring(7, 2)}"
-                            : cpf;
-                        }
-                        @formattedCpf
-                    </td>
+                    <td>@user.Phone</td>
+                    <td>@user.Cpf</td>
                     <td>
                         <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@user.UserId">Detalhar</a>
                         <a class="btn btn-sm btn-warning" asp-action="Edit" asp-route-id="@user.UserId">Editar</a>
-                        @*<a class="btn btn-sm btn-secondary" asp-action="Reviews" asp-route-id="@user.UserId">Avaliações</a>*@
+                        <a class="btn btn-sm btn-success" asp-action="Reviews" asp-route-id="@user.UserId">Avaliações</a>
                         <a class="btn btn-sm btn-primary" asp-action="ReservationsByUser" asp-controller="Reservations" asp-route-id="@user.UserId">Reservas</a>
                         <a asp-action="Delete" asp-route-id="@user.UserId" class="btn btn-sm btn-danger">Deletar</a>
                     </td>
